--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@zxing/library": "^0.21.3",
     "axios": "^1.10.0",
     "framer-motion": "^12.18.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.514.0",
     "next": "15.3.2",
+    "paystack": "^2.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
