--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/swc-win32-x64-msvc": "^15.4.2",
     "@zxing/library": "^0.21.3",
     "axios": "^1.10.0",
     "framer-motion": "^12.18.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.514.0",
-    "next": "15.3.2",
+    "next": "^15.4.6",
     "paystack": "^2.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
